--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open home.html",
-            "file": "c:\\Users\\talis\\OneDrive\\Documents\\GitHub\\git-test\\home.html"
+            "file": "c:\\Users\\talis\\OneDrive\\Documents\\GitHub\\git-test\\index.html"
         }
     ]
 }
