--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Open home.html",
             "file": "c:\\Users\\talis\\OneDrive\\Documents\\GitHub\\git-test\\index.html"
